objects/Prelog_Week__c.object
<CustomObject>
    <fields>
        <fullName>Commercial_Type__c</fullName>
        <label>Commercial Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>HYBRID</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
                <value>
                    <fullName>END</fullName>
                </value>
                <value>
                    <fullName>PROMO</fullName>
                </value>
                <value>
                    <fullName>TUNE IN</fullName>
                </value>
                <value>
                    <fullName>--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daypart__c</fullName>
        <label>Daypart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-EM 6-9a</fullName>
                </value>
                <value>
                    <fullName>2-DT 9a-6p</fullName>
                </value>
                <value>
                    <fullName>4-PR 6-12a</fullName>
                </value>
                <value>
                    <fullName>6-LN 12-3a</fullName>
                </value>
                <value>
                    <fullName>7-OV 3-6a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equiv_30_Sum__c</fullName>
        <label>Equiv :30 Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Prelog Weeks</relationshipLabel>
        <relationshipName>Prelog_Weeks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Sum__c</fullName>
        <label>Rate Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <type>Date</type>
    </fields>
    <label>Prelog Week</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Week__c</columns>
        <columns>Daypart__c</columns>
        <columns>Commercial_Type__c</columns>
        <columns>Version__c</columns>
        <columns>Rate_Sum__c</columns>
        <columns>Equiv_30_Sum__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PW-{0000}</displayFormat>
        <label>Prelog Weekly Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prelog Weeks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>